# raijin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION-GUIDE.md  PROGRESS.md  README.md  SECURITY.md  resize-code-comparison.md  rust-toolchain.toml  terminal-resize-research.md  test_emoji_width.rs
crates/cargo-raijin/: Cargo.toml
crates/cargo-raijin/src/: build.rs  bundle.rs  dev.rs  icon.rs  main.rs
crates/inazuma/: Cargo.toml  README.md  build.rs
crates/inazuma-component-registry/: Cargo.toml
crates/inazuma-component-registry/src/: component.rs  component_layout.rs
crates/inazuma-fuzzy/: Cargo.toml
crates/inazuma-fuzzy/src/: fuzzy.rs  matcher.rs  paths.rs  strings.rs
crates/inazuma-picker/: Cargo.toml
crates/inazuma-picker/src/: head.rs  highlighted_match_with_paths.rs  picker.rs  popover_menu.rs
crates/inazuma-rope/: Cargo.toml
crates/inazuma-rope/benches/: rope_benchmark.rs
crates/inazuma-rope/src/: chunk.rs  rope.rs  unclipped.rs
crates/inazuma-settings-content/: Cargo.toml
crates/inazuma-settings-content/src/: agent.rs  appearance.rs  chip.rs  editor.rs  extension.rs  fallible_options.rs  general.rs  language.rs  language_model.rs  merge_from.rs  project.rs  serde_helper.rs  settings_content.rs  terminal.rs  theme.rs  title_bar.rs  workspace.rs
crates/inazuma-settings-framework/: Cargo.toml
crates/inazuma-settings-framework/src/: base_keymap_setting.rs  content_into_inazuma.rs  editable_setting_control.rs  editorconfig_store.rs  keymap_file.rs  settings.rs  settings_file.rs  settings_store.rs
crates/inazuma-text/: Cargo.toml
crates/inazuma-text/src/: anchor.rs  locator.rs  network.rs  operation_queue.rs  patch.rs  tests.rs  text.rs  undo_map.rs
crates/inazuma-tokio/: Cargo.toml
crates/inazuma-tokio/src/: inazuma_tokio.rs
crates/inazuma-util/: Cargo.toml
crates/inazuma-util-macros/: Cargo.toml
crates/inazuma-util-macros/src/: util_macros.rs
crates/inazuma-util/src/: paths.rs  shell.rs  shell_env.rs  time.rs  util.rs  version.rs
crates/inazuma-util/src/test/: marked_text.rs
crates/inazuma/.cargo/: ci-config.toml
crates/inazuma/docs/: key_dispatch.md
crates/inazuma/examples/: prelude.rs
crates/inazuma/src/: _ownership_and_data_flow.rs  action.rs  app.rs  asset_cache.rs  color.rs  executor.rs  geometry.rs  inazuma.rs  inspector.rs  interactive.rs  key_dispatch.rs  keymap.rs  local_util.rs  platform.rs  queue.rs  scene.rs  scheduler.rs  shared_string.rs  style.rs  styled.rs  subscription.rs  tab_stop.rs  taffy.rs  test.rs  text_system.rs  view.rs  window.rs
crates/raijin-acp-thread/: Cargo.toml
crates/raijin-acp-thread/src/: acp_thread.rs  connection.rs  diff.rs  mention.rs  terminal.rs
crates/raijin-acp-tools/: Cargo.toml
crates/raijin-acp-tools/src/: acp_tools.rs
crates/raijin-action-log/: Cargo.toml
crates/raijin-action-log/src/: action_log.rs
crates/raijin-activity-indicator/: Cargo.toml
crates/raijin-activity-indicator/src/: activity_indicator.rs
crates/raijin-agent/: Cargo.toml
crates/raijin-agent-servers/: Cargo.toml
crates/raijin-agent-servers/src/: acp.rs  agent_servers.rs  custom.rs  e2e_tests.rs
crates/raijin-agent-settings/: Cargo.toml
crates/raijin-agent-settings/src/: agent_profile.rs  agent_settings.rs
crates/raijin-agent-ui/: Cargo.toml
crates/raijin-agent-ui/src/: agent_configuration.rs  agent_connection_store.rs  agent_diff.rs  agent_model_selector.rs  agent_panel.rs  agent_registry_ui.rs  agent_ui.rs  branch_names.rs  buffer_codegen.rs  completion_provider.rs  config_options.rs  context.rs  context_server_configuration.rs  conversation_view.rs  entry_view_state.rs  favorite_models.rs  inline_assistant.rs  inline_prompt_editor.rs  language_model_selector.rs  mention_set.rs  message_editor.rs  mode_selector.rs  model_selector.rs  model_selector_popover.rs  profile_selector.rs  slash_command.rs  slash_command_picker.rs  terminal_codegen.rs  terminal_inline_assistant.rs  test_support.rs  text_thread_editor.rs  text_thread_history.rs  thread_history.rs  thread_history_view.rs  thread_metadata_store.rs  threads_archive_view.rs
crates/raijin-agent/src/: agent.rs  db.rs  edit_agent.rs  legacy_thread.rs  native_agent_server.rs  outline.rs  pattern_extraction.rs  templates.rs  thread.rs  thread_store.rs  tool_permissions.rs  tools.rs
crates/raijin-ai-onboarding/: Cargo.toml
crates/raijin-ai-onboarding/src/: agent_api_keys_onboarding.rs  agent_panel_onboarding_card.rs  agent_panel_onboarding_content.rs  ai_onboarding.rs  ai_upsell_card.rs  edit_prediction_onboarding_content.rs  plan_definitions.rs  young_account_banner.rs
crates/raijin-app/: Cargo.toml  bundle.sh
crates/raijin-app/assets/: Assets.car  raijin.icns  rajin.icns
crates/raijin-app/src/: app_bootstrap.rs  command_history.rs  completions.rs  input.rs  main.rs  settings_view.rs  shell_install.rs  terminal.rs  terminal_element.rs  terminal_pane.rs  workspace.rs
crates/raijin-askpass/: Cargo.toml
crates/raijin-askpass/src/: askpass.rs  encrypted_password.rs
crates/raijin-assets/: Cargo.toml
crates/raijin-assets/src/: lib.rs
crates/raijin-assistant-slash-command/: Cargo.toml
crates/raijin-assistant-slash-command/src/: assistant_slash_command.rs  extension_slash_command.rs  slash_command_registry.rs  slash_command_working_set.rs
crates/raijin-assistant-slash-commands/: Cargo.toml
crates/raijin-assistant-slash-commands/src/: assistant_slash_commands.rs  default_command.rs  delta_command.rs  diagnostics_command.rs  fetch_command.rs  file_command.rs  now_command.rs  prompt_command.rs  selection_command.rs  streaming_example_command.rs  symbols_command.rs  tab_command.rs
crates/raijin-assistant-text-thread/: Cargo.toml
crates/raijin-assistant-text-thread/src/: assistant_text_thread.rs  assistant_text_thread_tests.rs  context_server_command.rs  text_thread.rs  text_thread_store.rs
crates/raijin-audio/: Cargo.toml
crates/raijin-audio/src/: audio.rs  audio_pipeline.rs  audio_settings.rs
crates/raijin-auto-update-ui/: Cargo.toml
crates/raijin-auto-update-ui/src/: auto_update_ui.rs
(+2418 files in other folders)
