[package]
name = "inazuma-component-registry"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/component.rs"

[dependencies]
inazuma-collections.workspace = true
inazuma.workspace = true
inventory.workspace = true
parking_lot.workspace = true
strum.workspace = true
raijin-theme.workspace = true

[dev-dependencies]
documented.workspace = true

[features]
default = []
