[package]
name = "inazuma-picker"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Generic fuzzy-search picker modal"

[lints]
workspace = true

[lib]
path = "src/picker.rs"
doctest = false

[features]
test-support = []

[dependencies]
inazuma = { workspace = true }
inazuma-menu = { workspace = true }
raijin-ui = { workspace = true }
inazuma-fuzzy = { workspace = true }
raijin-theme = { workspace = true }
raijin-workspace = { workspace = true }
raijin-actions = { workspace = true }
raijin-ui-input = { workspace = true }
raijin-theme-settings = { workspace = true }
schemars.workspace = true
serde.workspace = true
log = { workspace = true }
