[package]
name = "inazuma-rope"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/rope.rs"

[dependencies]
heapless.workspace = true
log.workspace = true
rayon.workspace = true
inazuma-sum_tree.workspace = true
unicode-segmentation.workspace = true
inazuma-util.workspace = true
raijin-tracing.workspace = true
tracing.workspace = true

[dev-dependencies]
ctor.workspace = true
inazuma = { workspace = true, features = ["test-support"] }
rand.workspace = true
inazuma-util = { workspace = true, features = ["test-support"] }
criterion.workspace = true
raijin-log.workspace = true

[[bench]]
name = "rope_benchmark"
harness = false

[package.metadata.cargo-machete]
ignored = ["tracing"]
