[package]
name = "inazuma-settings-content"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/settings_content.rs"

[features]
default = []

[dependencies]
anyhow.workspace = true
inazuma-collections.workspace = true
derive_more.workspace = true
inazuma.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
raijin-settings-json.workspace = true
inazuma-settings-macros.workspace = true
strum.workspace = true
toml.workspace = true
inazuma-util.workspace = true
