[package]
name = "inazuma-settings-framework"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/settings.rs"
doctest = false

[features]
test-support = ["inazuma/test-support", "raijin-fs/test-support"]

[dependencies]
anyhow.workspace = true
inazuma-collections.workspace = true
ec4rs.workspace = true
raijin-fs.workspace = true
futures.workspace = true
inazuma.workspace = true
inventory.workspace = true
log.workspace = true
raijin-paths.workspace = true
raijin-release-channel.workspace = true
rust-embed.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
inazuma-settings-content.workspace = true
raijin-settings-json.workspace = true
inazuma-settings-macros.workspace = true
smallvec.workspace = true
toml.workspace = true
toml_edit.workspace = true
inazuma-util.workspace = true
raijin-log.workspace = true

[dev-dependencies]
raijin-fs = { workspace = true, features = ["test-support"] }
inazuma = { workspace = true, features = ["test-support"] }

indoc.workspace = true
pretty_assertions.workspace = true
unindent.workspace = true
