[package]
name = "inazuma-text"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/text.rs"
doctest = false

[features]
test-support = ["rand", "inazuma-util/test-support"]

[dependencies]
anyhow.workspace = true
inazuma-clock.workspace = true
inazuma-collections.workspace = true
log.workspace = true
parking_lot.workspace = true
postage.workspace = true
rand = { workspace = true, optional = true }
regex.workspace = true
inazuma-rope.workspace = true
smallvec.workspace = true
inazuma-sum_tree.workspace = true
inazuma-util.workspace = true

[dev-dependencies]
inazuma-collections = { workspace = true, features = ["test-support"] }
ctor.workspace = true
inazuma = { workspace = true, features = ["test-support"] }
rand.workspace = true
inazuma-util = { workspace = true, features = ["test-support"] }
raijin-log.workspace = true
