[package]
name = "inazuma-tokio"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/inazuma_tokio.rs"
doctest = false

[dependencies]
anyhow.workspace = true
inazuma-util.workspace = true
inazuma.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
